--- a/kết thúc môn/Trang sức vàng.html
+++ b/kết thúc môn/Trang sức vàng.html
@@ -407,16 +407,16 @@
     <div class="sanpham"><a href="sp5.html"><img src="Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000013.jpg"></a><div class="ten">Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000013</div><div class="gia">341.097.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><a href="sp6.html"><img src="Nhẫn Vàng 18K đính đá Citrine PNJ Masterpiece CTMXC000002.jpg"></a><div class="ten">Nhẫn Vàng 18K đính đá Citrine Masterpiece CTMXC000002</div><div class="gia">41.832.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><a href="sp7.html"><img src="Bông tai Vàng 18K đính đá Citrine PNJ Masterpiece CTMXC000001.jpg"></a><div class="ten">Bông tai Vàng 18K đính đá Citrine Masterpiece CTMXC000005</div><div class="gia">42.072.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Lắc tay vàng</div><div class="gia">3,800,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp8.html"><img src="Kiềng cưới Vàng 24K PNJ 0000Y060001.jpg"></a><div class="ten">Kiềng cưới Vàng 24K 0000Y060001</div><div class="gia">46.070.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
  
   </div>
 </section>
 
 <section class="section">
   <div class="sanpham-wrapper">
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn bạc</div><div class="gia">1,200,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Bông tai bạc</div><div class="gia">950,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Dây chuyền bạc</div><div class="gia">1,800,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp9.html"><img src="Lắc tay Vàng 24K PNJ Turning Gold 0000Y004351.jpg"></a><div class="ten">Lắc tay Vàng 24K Turning Gold 0000Y004355</div><div class="gia">18.364.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp10.html"><img src="Bông tai Vàng 24K PNJ Turning Gold 0000Y003231.jpg"></a><div class="ten">Bông tai Vàng 24K Turning Gold 0000Y003236</div><div class="gia">18.539.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp11.html"><img src="Dây cổ Vàng 24K PNJ Turning Gold 0000Y000493.jpg" alt=""></a><div class="ten">Dây cổ Vàng 24K Turning Gold 0000Y000495</div><div class="gia">23.378.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Lắc tay bạc</div><div class="gia">1,650,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn bạc đặc biệt</div><div class="gia">2,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Bông tai vàng</div><div class="gia">2,500,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
