--- a/kết thúc môn/Trang sức bạc.html
+++ b/kết thúc môn/Trang sức bạc.html
@@ -400,21 +400,21 @@
 <section class="section">
   <div class="tenTS">Trang sức vàng</div>
   <div class="sanpham-wrapper">
-    <div class="sanpham"><a href="sp1.html"><img src="bộ 1.jpeg"></a><div class="ten">Bộ trang sức Vàng 18K Jewelry Lá Ngọc Cành Vàng 00020-00005</div><div class="gia">203.463.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp3.html"><img src="bông tai hồng ngọc.jpg"></a><div class="ten">Bông tai hồng ngọc 10k </div><div class="gia">11.612.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp2.html"><img src="lắc tay sao.jpg"></a><div class="ten">Lắc tay Vàng 10K Sweeties 0000Y004493</div><div class="gia">7.155.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp4.html"><img src="lắc tay vàng.jpg"></a><div class="ten">Lắc tay Vàng 10K Đính đá Ruby <br> Magnétique RBXMY000212</div><div class="gia">16.283.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp5.html"><img src="Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000013.jpg"></a><div class="ten">Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000013</div><div class="gia">341.097.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp6.html"><img src="Nhẫn Vàng 18K đính đá Citrine PNJ Masterpiece CTMXC000002.jpg"></a><div class="ten">Nhẫn Vàng 18K đính đá Citrine Masterpiece CTMXC000002</div><div class="gia">41.832.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp7.html"><img src="Bông tai Vàng 18K đính đá Citrine PNJ Masterpiece CTMXC000001.jpg"></a><div class="ten">Bông tai Vàng 18K đính đá Citrine Masterpiece CTMXC000005</div><div class="gia">42.072.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp8.html"><img src="Kiềng cưới Vàng 24K PNJ 0000Y060001.jpg"></a><div class="ten">Kiềng cưới Vàng 24K 0000Y060001</div><div class="gia">46.070.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp1 bạc.html"><img src="Bông tai Bạc đính đá PNJ ❤️ HELLO KITTY PFXMW000021.jpg"></a><div class="ten">Bộ trang sức Vàng 18K Jewelry Lá Ngọc Cành Vàng 00020-00005</div><div class="gia">203.463.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp2 bạc .html"><img src="Lắc tay Bạc đính đá PNJ ❤️ HELLO KITTY PFMXW000001.jpg"></a><div class="ten">Bông tai hồng ngọc 10k </div><div class="gia">11.612.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp3 bạc .html"><img src="Nhẫn Bạc đính đá Disney.jpg"></a><div class="ten">Lắc tay Vàng 10K Sweeties 0000Y004493</div><div class="gia">7.155.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp4 bạc .html"><img src="Mặt dây chuyền bạc đính đá PNJSilver XMXMW060031.jpg"></a><div class="ten">Lắc tay Vàng 10K Đính đá Ruby <br> Magnétique RBXMY000212</div><div class="gia">16.283.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp5 bạc .html"><img src="Nhẫn Bạc đính đá STYLE By PNJ BELLA FESTA XMXMW000191.jpg"></a><div class="ten">Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000013</div><div class="gia">341.097.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp6 bạc .html"><img src="Dây cổ Bạc đính đá STYLE By PNJ BELLA FESTA XMXMW000071.jpg"></a><div class="ten">Nhẫn Vàng 18K đính đá Citrine Masterpiece CTMXC000002</div><div class="gia">41.832.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp7 bạc .html"><img src="Bông tai Bạc đính đá STYLE By PNJ BELLA FESTA XMXMW000101.jpg"></a><div class="ten">Bông tai Vàng 18K đính đá Citrine Masterpiece CTMXC000005</div><div class="gia">42.072.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp8 bạc .html"><img src="Dây cổ Bạc đính đá STYLE By PNJ BELLA FESTA ZTXMW000041.jpg"></a><div class="ten">Kiềng cưới Vàng 24K 0000Y060001</div><div class="gia">46.070.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
  
   </div>
 </section>
 
 <section class="section">
   <div class="sanpham-wrapper">
-    <div class="sanpham"><a href="sp9.html"><img src="Lắc tay Vàng 24K PNJ Turning Gold 0000Y004351.jpg"></a><div class="ten">Lắc tay Vàng 24K Turning Gold 0000Y004355</div><div class="gia">18.364.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp9 bạc .html"><img src="Lắc tay Vàng 24K PNJ Turning Gold 0000Y004351.jpg"></a><div class="ten">Lắc tay Vàng 24K Turning Gold 0000Y004355</div><div class="gia">18.364.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><a href="sp10.html"><img src="Bông tai Vàng 24K PNJ Turning Gold 0000Y003231.jpg"></a><div class="ten">Bông tai Vàng 24K Turning Gold 0000Y003236</div><div class="gia">18.539.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><a href="sp11.html"><img src="Dây cổ Vàng 24K PNJ Turning Gold 0000Y000493.jpg" alt=""></a><div class="ten">Dây cổ Vàng 24K Turning Gold 0000Y000495</div><div class="gia">23.378.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><a href="sp12.html"><img src="Bộ trang sức Vàng 10K PNJ Magnétique 00392-00212.jpg"></a><div class="ten">Bộ trang sức Vàng 10K Magnétique 00392-00212</div><div class="gia">54.623.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
