--- a/kết thúc môn/Trang chủ.html
+++ b/kết thúc môn/Trang chủ.html
@@ -484,12 +484,12 @@ nav ul li a:hover {
   <div class="slie slie-bac">
     <button class="trai trai-bac">&#10094;</button>
     <div class="slie-wrapper slie-wrapper-bac">
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Nhẫn bạc</div><div class="gia">1,200,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Bông tai bạc</div><div class="gia">950,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Dây chuyền bạc</div><div class="gia">1,800,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Lắc tay bạc</div><div class="gia">1,650,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Nhẫn bạc đặc biệt</div><div class="gia">2,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="xemthem"><a href="">XEM THÊM</a></div>
+      <div class="sanpham"><a href="sp1 bạc.html"><img src="Bông tai Bạc đính đá PNJ ❤️ HELLO KITTY PFXMW000021.jpg"></a><div class="ten">Bông tai Bạc đính đá ❤️ <br>HELLO KITTY PFXMW000021</div><div class="gia">495.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp2 bạc .html"><img src="Lắc tay Bạc đính đá PNJ ❤️ HELLO KITTY PFMXW000001.jpg"></a><div class="ten">Lắc tay Bạc đính đá ❤️<br> HELLO KITTY PFMXW000001</div><div class="gia">1.155.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp3 bạc .html"><img src="Nhẫn Bạc đính đá Disney.jpg"></a><div class="ten">Nhẫn Bạc đính đá Disney</div><div class="gia">995.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp4 bạc .html"><img src="Mặt dây chuyền bạc đính đá PNJSilver XMXMW060031.jpg"></a><div class="ten">Mặt dây chuyền bạc đính đá <br>Silver XMXMW060031</div><div class="gia">1.165.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp5 bạc .html"><img src="Nhẫn Bạc đính đá STYLE By PNJ BELLA FESTA XMXMW000191.jpg"></a><div class="ten">Nhẫn Bạc đính đá STYLE By <br> BELLA FESTA XMXMW000191</div><div class="gia">1.095.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="xemthem"><a href="Trang sức bạc.html">XEM THÊM</a></div>
     </div>
     <button class="phai phai-bac">&#10095;</button>
   </div>
