--- a/kết thúc môn/A1Trang sức bạc.html
+++ b/kết thúc môn/A1Trang sức bạc.html
@@ -343,7 +343,7 @@
       <input type="text" placeholder="Search...">
       <img src="search.png" alt="">
     </div>
-    <a href="Đăng nhập.html"><img src="user.png" alt="" width="20" height="20"></a>
+    <a href="A6Đăng nhập.html"><img src="user.png" alt="" width="20" height="20"></a>
     <div style="position:relative; display:inline-block;">
       <img src="shopping-bag .png" alt="" width="30" height="30" id="giohang-icon" style="cursor:pointer;">
       <span id="giohang-count">0</span>
@@ -353,8 +353,8 @@
 
 <nav>
   <ul>
-    <li><a href="Trang chủ.html">Trang chủ</a></li>
-    <li><a href="Giới thiệu.html">Giới thiệu</a></li>
+    <li><a href="A0Trang chủ.html">Trang chủ</a></li>
+    <li><a href="A4Giới thiệu.html">Giới thiệu</a></li>
 
     <li class="has-submenu">
       <a href="#">Sản phẩm</a>
@@ -389,7 +389,7 @@
       </div>
     </li>
 
-    <li><a href="Liên hệ.html">Liên hệ</a></li>
+    <li><a href="A3Liên hệ.html">Liên hệ</a></li>
   </ul>
 </nav>
 
@@ -400,24 +400,24 @@
 <section class="section">
   <div class="tenTS">Trang sức vàng</div>
   <div class="sanpham-wrapper">
-    <div class="sanpham"><a href="sp1 bạc.html"><img src="Bông tai Bạc đính đá PNJ ❤️ HELLO KITTY PFXMW000021.jpg"></a><div class="ten">Bộ trang sức Vàng 18K Jewelry Lá Ngọc Cành Vàng 00020-00005</div><div class="gia">203.463.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp2 bạc .html"><img src="Lắc tay Bạc đính đá PNJ ❤️ HELLO KITTY PFMXW000001.jpg"></a><div class="ten">Bông tai hồng ngọc 10k </div><div class="gia">11.612.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp3 bạc .html"><img src="Nhẫn Bạc đính đá Disney.jpg"></a><div class="ten">Lắc tay Vàng 10K Sweeties 0000Y004493</div><div class="gia">7.155.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp4 bạc .html"><img src="Mặt dây chuyền bạc đính đá PNJSilver XMXMW060031.jpg"></a><div class="ten">Lắc tay Vàng 10K Đính đá Ruby <br> Magnétique RBXMY000212</div><div class="gia">16.283.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp5 bạc .html"><img src="Nhẫn Bạc đính đá STYLE By PNJ BELLA FESTA XMXMW000191.jpg"></a><div class="ten">Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000013</div><div class="gia">341.097.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp6 bạc .html"><img src="Dây cổ Bạc đính đá STYLE By PNJ BELLA FESTA XMXMW000071.jpg"></a><div class="ten">Nhẫn Vàng 18K đính đá Citrine Masterpiece CTMXC000002</div><div class="gia">41.832.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp7 bạc .html"><img src="Bông tai Bạc đính đá STYLE By PNJ BELLA FESTA XMXMW000101.jpg"></a><div class="ten">Bông tai Vàng 18K đính đá Citrine Masterpiece CTMXC000005</div><div class="gia">42.072.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp8 bạc .html"><img src="Dây cổ Bạc đính đá STYLE By PNJ BELLA FESTA ZTXMW000041.jpg"></a><div class="ten">Kiềng cưới Vàng 24K 0000Y060001</div><div class="gia">46.070.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp1 bạc.html"><img src="Bông tai Bạc đính đá PNJ ❤️ HELLO KITTY PFXMW000021.jpg"></a><div class="ten">Bông tai Bạc đính đá ❤️ HELLO KITTY PFXMW000029</div><div class="gia">495.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp2 bạc .html"><img src="Lắc tay Bạc đính đá PNJ ❤️ HELLO KITTY PFMXW000001.jpg"></a><div class="ten">Lắc tay Bạc đính đá ❤️ HELLO KITTY PFMXW000002 </div><div class="gia">1.155.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp3 bạc .html"><img src="Nhẫn Bạc đính đá Disney.jpg"></a><div class="ten">Nhẫn Bạc đính đá Disney INSIDE OUT 2 ZTXMH060000</div><div class="gia">995.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp4 bạc .html"><img src="Mặt dây chuyền bạc đính đá PNJSilver XMXMW060031.jpg"></a><div class="ten">Mặt dây chuyền bạc đính đá Silver XMXMW060033</div><div class="gia">1.165.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp5 bạc .html"><img src="Nhẫn Bạc đính đá STYLE By PNJ BELLA FESTA XMXMW000191.jpg"></a><div class="ten">Nhẫn Bạc đính đá STYLE By PNJ BELLA FESTA XMXMW000197</div><div class="gia">1.095.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp6 bạc .html"><img src="Dây cổ Bạc đính đá STYLE By PNJ BELLA FESTA XMXMW000071.jpg"></a><div class="ten">Dây cổ Bạc đính đá STYLE By BELLA FESTA XMXMW000076</div><div class="gia">2.295.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp7 bạc .html"><img src="Bông tai Bạc đính đá STYLE By PNJ BELLA FESTA XMXMW000101.jpg"></a><div class="ten">Bông tai Bạc đính đá STYLE By BELLA FESTA XMXMW000102</div><div class="gia">2.195.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp8 bạc .html"><img src="Dây cổ Bạc đính đá STYLE By PNJ BELLA FESTA ZTXMW000041.jpg"></a><div class="ten">Dây cổ Bạc đính đá STYLE By BELLA FESTA ZTXMW000045</div><div class="gia">2.195.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
  
   </div>
 </section>
 
 <section class="section">
   <div class="sanpham-wrapper">
-    <div class="sanpham"><a href="sp9 bạc .html"><img src="Lắc tay Vàng 24K PNJ Turning Gold 0000Y004351.jpg"></a><div class="ten">Lắc tay Vàng 24K Turning Gold 0000Y004355</div><div class="gia">18.364.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp10.html"><img src="Bông tai Vàng 24K PNJ Turning Gold 0000Y003231.jpg"></a><div class="ten">Bông tai Vàng 24K Turning Gold 0000Y003236</div><div class="gia">18.539.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp11.html"><img src="Dây cổ Vàng 24K PNJ Turning Gold 0000Y000493.jpg" alt=""></a><div class="ten">Dây cổ Vàng 24K Turning Gold 0000Y000495</div><div class="gia">23.378.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><a href="sp12.html"><img src="Bộ trang sức Vàng 10K PNJ Magnétique 00392-00212.jpg"></a><div class="ten">Bộ trang sức Vàng 10K Magnétique 00392-00212</div><div class="gia">54.623.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp9 bạc .html"><img src="Nhẫn Bạc đính đá STYLE By PNJ BELLA FESTA ZTZTW000003.jpg"></a><div class="ten">Nhẫn Bạc đính đá STYLE By BELLA FESTA ZTZTW000007</div><div class="gia">1.195.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp10 bạc .html"><img src="Bông tai Bạc đính đá STYLE By PNJ BELLA FESTA ZTMXW000013.jpg"></a><div class="ten">Bông tai Bạc đính đá STYLE By BELLA FESTA ZTMXW000018</div><div class="gia">1.695.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp11 bạc .html"><img src="Nhẫn Bạc đính đá STYLE By PNJ BELLA FESTA ZTZTW000002.jpg" alt=""></a><div class="ten">Nhẫn Bạc đính đá STYLE By BELLA FESTA ZTMXW000015</div><div class="gia">755.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="sp12 bạc .html"><img src="Dây cổ Bạc đính đá STYLE nơ1.jpg"></a><div class="ten">Dây cổ Bạc đính đá STYLE By BELLA FESTA ZTXMW000044</div><div class="gia">1.995.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
 </section>
 
 <!-- Giỏ hàng popup -->
