--- a/kết thúc môn/A5Đăng ký.html
+++ b/kết thúc môn/A5Đăng ký.html
@@ -38,7 +38,7 @@ body{height:100vh;display:flex;justify-content:center;align-items:center;backgro
   <input type="password" placeholder="Nhập lại mật khẩu" required>
   <button type="submit">Đăng ký</button>
 </form>
-<a href="Đăng nhập.html">Quay lại đăng nhập</a>
+<a href="A6Đăng nhập.html">Quay lại đăng nhập</a>
 </div>
 </body>
 </html>
