--- a/kết thúc môn/sp10 bạc .html
+++ b/kết thúc môn/sp10 bạc .html
@@ -317,7 +317,7 @@
       <input type="text" placeholder="Search...">
       <img src="search.png" alt="">
     </div>
-    <a href="Đăng nhập.html"><img src="user.png" alt="" width="20" height="20"></a>
+    <a href="A6Đăng nhập.html"><img src="user.png" alt="" width="20" height="20"></a>
     <div style="position:relative; display:inline-block;">
       <img src="shopping-bag .png" alt="" width="30" height="30" id="giohang-icon" style="cursor:pointer;">
       <span id="giohang-count">0</span>
@@ -327,8 +327,8 @@
 
 <nav>
   <ul>
-    <li><a href="Trang chủ.html">Trang chủ</a></li>
-    <li><a href="Giới thiệu.html">Giới thiệu</a></li>
+    <li><a href="A0Trang chủ.html">Trang chủ</a></li>
+    <li><a href="A4Giới thiệu.html">Giới thiệu</a></li>
     <li class="has-submenu">
       <a href="#">Sản phẩm</a>
       <div class="mega-menu">
@@ -361,7 +361,7 @@
         </div>
       </div>
     </li>
-    <li><a href="Liên hệ.html">Liên hệ</a></li>
+    <li><a href="A3Liên hệ.html">Liên hệ</a></li>
   </ul>
 </nav>
 <div>
@@ -370,29 +370,21 @@
 <div class="anhsp">
   <div class="product-gallery">
     <div class="thumbnails">
-      <img src="Bông tai Bạc đính đá PNJ ❤️ HELLO KITTY PFXMW000023.jpg" alt="thumb1" class="active" />
-      <img src="Bông tai Bạc đính đá PNJ ❤️ HELLO KITTY PFXMW000024.jpg" alt="thumb2" />
-      <img src="Bông tai Bạc đính đá PNJ ❤️ HELLO KITTY PFXMW000021.jpg" alt="thumb3" />
-      <img src="Bông tai Bạc đính đá PNJ ❤️ HELLO KITTY PFXMW000022.jpg" alt="thumb4" />
+      <img src="Bông tai Bạc đính đá STYLE By PNJ BELLA FESTA ZTMXW000014.jpg" alt="thumb1" class="active" />
+      <img src="Bông tai Bạc đính đá STYLE By PNJ BELLA FESTA ZTMXW000011.jpg" alt="thumb2" />
+      <img src="Bông tai Bạc đính đá STYLE By PNJ BELLA FESTA ZTMXW000012.jpg" alt="thumb3" />
+      <img src="Bông tai Bạc đính đá STYLE By PNJ BELLA FESTA ZTMXW000013.jpg" alt="thumb4" />
     </div>
     <div class="main-image">
-      <img src="Bông tai Bạc đính đá PNJ ❤️ HELLO KITTY PFXMW000023.jpg" alt="Ảnh chính" id="mainImage" />
+      <img src="Bông tai Bạc đính đá STYLE By PNJ BELLA FESTA ZTMXW000014.jpg" alt="Ảnh chính" id="mainImage" />
     </div>
   </div>
 
   <div class="product-info">
-    <h1>Bông tai Bạc đính đá ❤️ HELLO KITTY PFXMW000029</h1>
-    <p class="code">Mã: SBPFXMW000029</p>
-    <p class="price">495.000 ₫</p>
+    <h1>Bông tai Bạc đính đá STYLE By BELLA FESTA ZTMXW000018</h1>
+    <p class="code">Mã: SBZTMXW000018</p>
+    <p class="price">1.695.000 ₫</p>
     <p class="note">(Giá sản phẩm thay đổi tùy trọng lượng vàng và đá)</p>
-    <p class="size">Vui lòng chọn size</p>
-    <select>
-      <option>Chọn size tay</option>
-      <option>Size 14</option>
-      <option>Size 16</option>
-      <option>Size 18</option>
-      <option>Size 20</option>
-    </select>
     <div class="buttons">
       <button class="btn-buy" style="color: #fff;">Mua ngay
         <br><span><i>(Giao hàng miễn phí  tận nhà hoặc tại cửa hàng)</i></span>
