--- a/kết thúc môn/A0Trang chủ.html
+++ b/kết thúc môn/A0Trang chủ.html
@@ -402,7 +402,7 @@ nav ul li a:hover {
       <input type="text" placeholder="Search...">
       <img src="search.png" alt="">
     </div>
-    <a href="Đăng nhập.html"><img src="user.png" alt="" width="20" height="20"></a>
+    <a href="A6Đăng nhập.html"><img src="user.png" alt="" width="20" height="20"></a>
     <div style="position:relative; display:inline-block;">
       <img src="shopping-bag .png" alt="" width="30" height="30" id="giohang-icon" style="cursor:pointer;">
       <span id="giohang-count">0</span>
@@ -414,7 +414,7 @@ nav ul li a:hover {
 <nav>
   <ul>
     <li><a href="#">Trang chủ</a></li>
-    <li><a href="Giới thiệu.html">Giới thiệu</a></li>
+    <li><a href="A4Giới thiệu.html">Giới thiệu</a></li>
     <li class="has-submenu">
       <a href="#">Sản phẩm</a>
       <div class="mega-menu">
@@ -447,7 +447,7 @@ nav ul li a:hover {
         </div>
       </div>
     </li>
-    <li><a href="Liên hệ.html">Liên hệ</a></li>
+    <li><a href="A3Liên hệ.html">Liên hệ</a></li>
   </ul>
 </nav>
 
@@ -472,7 +472,7 @@ nav ul li a:hover {
       <div class="sanpham"><a href="sp2.html"><img src="lắc tay sao.jpg"></a><div class="ten">Lắc tay Vàng 10K Sweeties <br>0000Y004493</div><div class="gia">7.155.000 đ</div><button class="mua-ngay">Mua ngay</button></div>
       <div class="sanpham"><a href="sp3.html"><img src="bông tai hồng ngọc.jpg"></a><div class="ten">Bông tai Vàng 10K Đính đá Ruby <br> Magnétique RBXMY000392</div><div class="gia">11.612.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
       <div class="sanpham"><a href="sp4.html"><img src="lắc tay vàng.jpg"></a><div class="ten">Lắc tay Vàng 10K Đính đá Ruby <br> Magnétique RBXMY000212</div><div class="gia">16.283.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Nhẫn vàng 24k</div><div class="gia">5,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp5.html"><img src="Dây cổ Vàng 18K đính đá Citrine Masterpiece CTMXC000013.jpg"></a><div class="ten">Dây cổ Vàng 18K đính đá Citrine <br>Masterpiece CTMXC000013</div><div class="gia">341.097.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
       <div class="xemthem"><a href="Trang sức vàng.html">XEM THÊM</a></div>
     </div>
     <button class="phai phai-vang">&#10095;</button>
@@ -484,12 +484,12 @@ nav ul li a:hover {
   <div class="slie slie-bac">
     <button class="trai trai-bac">&#10094;</button>
     <div class="slie-wrapper slie-wrapper-bac">
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Nhẫn bạc</div><div class="gia">1,200,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Bông tai bạc</div><div class="gia">950,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Dây chuyền bạc</div><div class="gia">1,800,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Lắc tay bạc</div><div class="gia">1,650,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Nhẫn bạc đặc biệt</div><div class="gia">2,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="xemthem"><a href="">XEM THÊM</a></div>
+      <div class="sanpham"><a href="sp1 bạc.html"><img src="Bông tai Bạc đính đá PNJ ❤️ HELLO KITTY PFXMW000021.jpg"></a><div class="ten">Bông tai Bạc đính đá ❤️ <br>HELLO KITTY PFXMW000021</div><div class="gia">495.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp2 bạc .html"><img src="Lắc tay Bạc đính đá PNJ ❤️ HELLO KITTY PFMXW000001.jpg"></a><div class="ten">Lắc tay Bạc đính đá ❤️<br> HELLO KITTY PFMXW000001</div><div class="gia">1.155.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp3 bạc .html"><img src="Nhẫn Bạc đính đá Disney.jpg"></a><div class="ten">Nhẫn Bạc đính đá Disney</div><div class="gia">995.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp4 bạc .html"><img src="Mặt dây chuyền bạc đính đá PNJSilver XMXMW060031.jpg"></a><div class="ten">Mặt dây chuyền bạc đính đá <br>Silver XMXMW060031</div><div class="gia">1.165.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp5 bạc .html"><img src="Nhẫn Bạc đính đá STYLE By PNJ BELLA FESTA XMXMW000191.jpg"></a><div class="ten">Nhẫn Bạc đính đá STYLE By <br> BELLA FESTA XMXMW000191</div><div class="gia">1.095.000 ₫</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="xemthem"><a href="Trang sức bạc.html">XEM THÊM</a></div>
     </div>
     <button class="phai phai-bac">&#10095;</button>
   </div>
@@ -500,11 +500,11 @@ nav ul li a:hover {
   <div class="slie slie-kc">
     <button class="trai trai-kc">&#10094;</button>
     <div class="slie-wrapper slie-wrapper-kc">
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Nhẫn kim cương</div><div class="gia">12,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Bông tai kim cương</div><div class="gia">15,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Dây chuyền kim cương</div><div class="gia">20,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Lắc tay kim cương</div><div class="gia">18,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-      <div class="sanpham"><a href="#"><img src="Bông tai bạc 10k.jpg"></a><div class="ten">Nhẫn kim cương VIP</div><div class="gia">25,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp1 kimcuong.html"><img src="Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW003911.jpg"></a><div class="ten">Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW006294</div><div class="gia">12,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp1 kimcuong.html"><img src="Mặt dây chuyền Kim cương Vàng trắng 14K PNJ DDDDW001651.jpg"></a><div class="ten">Bông tai kim cương</div><div class="gia">15,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp1 kimcuong.html"><img src="Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW003911.jpg"></a><div class="ten">Dây chuyền kim cương</div><div class="gia">20,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp1 bạc.html"><img src="Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW003914.jpg"></a><div class="ten">Lắc tay kim cương</div><div class="gia">18,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp1 kimcuong.html"><img src="Mặt dây chuyền Kim cương Vàng trắng 14K PNJ DDDDW001651.jpg"></a><div class="ten">Nhẫn kim cương VIP</div><div class="gia">25,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
       <div class="xemthem"><a href="">XEM THÊM</a></div>
     </div>
     <button class="phai phai-kc">&#10095;</button>
