--- a/kết thúc môn/A3Liên hệ.html
+++ b/kết thúc môn/A3Liên hệ.html
@@ -246,7 +246,7 @@ nav ul li a:hover {
       <input type="text" placeholder="Search...">
       <img src="search.png" alt="">
     </div>
-    <a href="Đăng nhập.html"><img src="user.png" alt="" width="20" height="20"></a>
+    <a href="A6Đăng nhập.html"><img src="user.png" alt="" width="20" height="20"></a>
     <div style="position:relative; display:inline-block;">
       <img src="shopping-bag .png" alt="" width="30" height="30" id="giohang-icon" style="cursor:pointer;">
     </div>
@@ -256,8 +256,8 @@ nav ul li a:hover {
 <!-- 🌟 MENU CHÍNH -->
 <nav>
   <ul>
-    <li><a href="Trang chủ.html">Trang chủ</a></li>
-    <li><a href="Giới thiệu.html">Giới thiệu</a></li>
+    <li><a href="A0Trang chủ.html">Trang chủ</a></li>
+    <li><a href="A4Giới thiệu.html">Giới thiệu</a></li>
 
     <li class="has-submenu">
       <a href="#">Sản phẩm</a>
