--- a/kết thúc môn/sp1 kimcuong.html
+++ b/kết thúc môn/sp1 kimcuong.html
@@ -282,6 +282,22 @@
     width: 45px;
     margin-right: 5px;
 }
+.back-btn {
+    background-color: #c20;   /* màu đỏ */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 6px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+
+  .back-btn:hover {
+    background-color: #a01818;
+  }
   </style>
 </head>
 <body>
@@ -301,7 +317,7 @@
       <input type="text" placeholder="Search...">
       <img src="search.png" alt="">
     </div>
-    <a href="Đăng nhập.html"><img src="user.png" alt="" width="20" height="20"></a>
+    <a href="A6Đăng nhập.html"><img src="user.png" alt="" width="20" height="20"></a>
     <div style="position:relative; display:inline-block;">
       <img src="shopping-bag .png" alt="" width="30" height="30" id="giohang-icon" style="cursor:pointer;">
       <span id="giohang-count">0</span>
@@ -311,8 +327,8 @@
 
 <nav>
   <ul>
-    <li><a href="Trang chủ.html">Trang chủ</a></li>
-    <li><a href="Giới thiệu.html">Giới thiệu</a></li>
+    <li><a href="A0Trang chủ.html">Trang chủ</a></li>
+    <li><a href="A4Giới thiệu.html">Giới thiệu</a></li>
     <li class="has-submenu">
       <a href="#">Sản phẩm</a>
       <div class="mega-menu">
@@ -345,41 +361,38 @@
         </div>
       </div>
     </li>
-    <li><a href="#">Liên hệ</a></li>
+    <li><a href="A4Giới thiệu.html">Liên hệ</a></li>
   </ul>
 </nav>
 <div>
-    
+    <button id="backButton" class="back-btn">← Quay lại</button>
 </div>
 <div class="anhsp">
   <div class="product-gallery">
     <div class="thumbnails">
-      <img src="bộ 1.jpeg" alt="thumb1" class="active" />
-      <img src="cổ.jpeg" alt="thumb2" />
-      <img src="tai.jpeg" alt="thumb3" />
-      <img src="tay.jpeg" alt="thumb4" />
+      <img src="Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW003911.jpg" alt="thumb1" class="active" />
+      <img src="Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW003912.jpg" alt="thumb2" />
+      <img src="Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW003913.png" alt="thumb3" />
+      <img src="Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW003914.jpg" alt="thumb4" />
     </div>
     <div class="main-image">
-      <img src="bộ 1.jpeg" alt="Ảnh chính" id="mainImage" />
+      <img src="Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW003911.jpg" alt="Ảnh chính" id="mainImage" />
     </div>
   </div>
 
   <div class="product-info">
-    <h1>Bộ trang sức Vàng 18K Jewelry Lá Ngọc Cành Vàng 00020-00005</h1>
-    <p class="code">Mã: GBQT00Y000020-GHQT00Y000001-GVQT00Y000005</p>
-    <p class="price">203.463.000 ₫</p>
+    <h1>Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW003911</h1>
+    <p class="code">Mã: GM00DDW000082</p>
+    <p class="price">66.849.000 ₫</p>
     <p class="note">(Giá sản phẩm thay đổi tùy trọng lượng vàng và đá)</p>
-    <p class="size">Vui lòng chọn size</p>
-    <select>
-      <option>Chọn size tay</option>
-      <option>Size 14</option>
-      <option>Size 16</option>
-      <option>Size 18</option>
-      <option>Size 20</option>
-    </select>
     <div class="buttons">
-      <button class="btn-buy" id="them-giohang" style="color:#c20; background:#fff; border:1px solid #c20;">Thêm vào giỏ hàng</button>
+      <button class="btn-buy" style="color: #fff;">Mua ngay
+        <br><span><i>(Giao hàng miễn phí  tận nhà hoặc tại cửa hàng)</i></span>
+      </button>
+      <p>
+        <button class="btn-buy" id="them-giohang" style="color:#c20; background:#fff; border:1px solid #c20;">Thêm vào giỏ hàng</button>
       <button class="btn-buy" style="color:#c20; background:#fff; border:1px solid #c20;">Gọi ngay (miễn phí)</button>
+      </p>
       <div class="services">
         <span>🚚 Miễn phí giao hàng</span>
         <span>🕒 Phục vụ 24/7</span>
@@ -503,6 +516,9 @@
     cart.length = 0;
     updateCart();
     cartPopup.style.display = 'none';
+  });
+  document.getElementById('backButton').addEventListener('click', () => {
+    history.back();  // Quay lại trang trước
   });
 </script>
 
