--- a/kết thúc môn/sp3 bạc .html
+++ b/kết thúc môn/sp3 bạc .html
@@ -317,7 +317,7 @@
       <input type="text" placeholder="Search...">
       <img src="search.png" alt="">
     </div>
-    <a href="Đăng nhập.html"><img src="user.png" alt="" width="20" height="20"></a>
+    <a href="A6Đăng nhập.html"><img src="user.png" alt="" width="20" height="20"></a>
     <div style="position:relative; display:inline-block;">
       <img src="shopping-bag .png" alt="" width="30" height="30" id="giohang-icon" style="cursor:pointer;">
       <span id="giohang-count">0</span>
@@ -327,8 +327,8 @@
 
 <nav>
   <ul>
-    <li><a href="Trang chủ.html">Trang chủ</a></li>
-    <li><a href="Giới thiệu.html">Giới thiệu</a></li>
+    <li><a href="A0Trang chủ.html">Trang chủ</a></li>
+    <li><a href="A4Giới thiệu.html">Giới thiệu</a></li>
     <li class="has-submenu">
       <a href="#">Sản phẩm</a>
       <div class="mega-menu">
@@ -361,7 +361,7 @@
         </div>
       </div>
     </li>
-    <li><a href="Liên hệ.html">Liên hệ</a></li>
+    <li><a href="A3Liên hệ.html">Liên hệ</a></li>
   </ul>
 </nav>
 <div>
