--- a/kết thúc môn/A0Trang chủ.html
+++ b/kết thúc môn/A0Trang chủ.html
@@ -500,7 +500,7 @@ nav ul li a:hover {
   <div class="slie slie-kc">
     <button class="trai trai-kc">&#10094;</button>
     <div class="slie-wrapper slie-wrapper-kc">
-      <div class="sanpham"><a href="sp1 kimcuong.html"><img src="Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW003911.jpg"></a><div class="ten">Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW006294</div><div class="gia">12,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+      <div class="sanpham"><a href="sp1 kimcuong.html"><img src="Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW003911.jpg"></a><div class="ten">Nhẫn Kim cương Vàng trắng <br> 14K PNJ DDDDW006294</div><div class="gia">12,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
       <div class="sanpham"><a href="sp1 kimcuong.html"><img src="Mặt dây chuyền Kim cương Vàng trắng 14K PNJ DDDDW001651.jpg"></a><div class="ten">Bông tai kim cương</div><div class="gia">15,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
       <div class="sanpham"><a href="sp1 kimcuong.html"><img src="Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW003911.jpg"></a><div class="ten">Dây chuyền kim cương</div><div class="gia">20,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
       <div class="sanpham"><a href="sp1 bạc.html"><img src="Nhẫn Kim cương Vàng trắng 14K PNJ DDDDW003914.jpg"></a><div class="ten">Lắc tay kim cương</div><div class="gia">18,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
