--- a/kết thúc môn/A6Đăng nhập.html
+++ b/kết thúc môn/A6Đăng nhập.html
@@ -45,7 +45,7 @@ body{height:100vh;display:flex;justify-content:center;align-items:center;backgro
 document.getElementById('loginForm').addEventListener('submit', function(e){
     e.preventDefault(); // Ngăn reload trang
     alert('Đăng nhập thành công!');
-    window.location.href = "Trang chủ.html"; // <--- đổi thành trang chủ thực tế
+    window.location.href = "A0Trang chủ.html"; // <--- đổi thành trang chủ thực tế
 });
 </script>
 </body>
